--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,9 +1,12 @@
+# Definindo o nível de log global
 rootLogger.level = info
 
+# Definindo o appender console
 appender.console.type = Console
 appender.console.name = ConsoleAppender
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
+# Associando o appender ao logger root
 rootLogger.appenderRefs = console
 rootLogger.appenderRef.console.ref = ConsoleAppender
