Update log4j uso

--- a/.github/workflows/gha-ci.yml
+++ b/.github/workflows/gha-ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: mvn clean install
 
       - name: Run Maven tests
-        run: mvn test
+        run: mvn clean test
 
       - name: Generate Allure Report
         run: mvn verify
